# HandyGCCS

./: build.sh  pyproject.toml  remove.sh
src/handycon/: back_paddles.py  brightness_controller.py  constants.py  device_explorer.py  devices.py  event_emitter.py  handycon.py  main.py  notify_db.py  utilities.py
src/handycon/handhelds/: ally_gen1.py  anb_gen1.py  aok_gen1.py  aok_gen2.py  aya_gen1.py  aya_gen2.py  aya_gen3.py  aya_gen4.py  aya_gen5.py  aya_gen6.py  aya_gen7.py  ayn_gen1.py  ayn_gen2.py  ayn_gen3.py  gpd_gen1.py  gpd_gen2.py  gpd_gen3.py  oxp_gen1.py  oxp_gen2.py  oxp_gen3.py  oxp_gen4.py  oxp_gen5.py  oxp_gen6.py
usr/share/handygccs/scripts/: capture-system.py
